--- a/src/components/clientPage/clientPage.css
+++ b/src/components/clientPage/clientPage.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     overflow: hidden;
     width: 100%;
-    background-color: #eee;
+    color: #eee;
 }
 
 .dataClient {
