--- a/src/components/productDetails/productDetails.css
+++ b/src/components/productDetails/productDetails.css
@@ -1,15 +1,21 @@
 .product-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
+  padding-top: 200px;
   color: white;
   }
-  
+  .product-item{
+    display: flex;
+    align-items: end;
+    flex-direction: row;
+    column-gap: 50px;
+  }
   .product-image-container {
     flex: 1;
     display: flex;
     justify-content: center;
-    margin: 50px;
+
   }
   
   .product-image {
@@ -21,8 +27,8 @@
   
   .product-details-container {
     flex: 2;
-    padding: 1rem;
-    min-width: 400px;
+
+   padding-top: 15px;
   }
   
   .product-name {
