--- a/src/components/productDetails/productDetails.css
+++ b/src/components/productDetails/productDetails.css
@@ -3,13 +3,17 @@
     flex-direction: row;
     justify-content: center;
   padding-top: 200px;
-  color: white;
+  color: black;
+
   }
   .product-item{
     display: flex;
-    align-items: end;
+    align-items: center;
     flex-direction: row;
     column-gap: 50px;
+    background: white;
+    padding: 30px;
+    border-radius: 15px;
   }
   .product-image-container {
     flex: 1;
@@ -27,8 +31,10 @@
   
   .product-details-container {
     flex: 2;
-
-   padding-top: 15px;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
   }
   
   .product-name {
@@ -41,6 +47,9 @@
     margin-top: 1rem;
     margin-left: 10px;
     font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
   }
   
   .product-details p {
@@ -53,4 +62,10 @@
   }
   .addToCartBttn{
     background: white;
+    text-decoration:none;
+    color: black;
+    max-width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
