--- a/src/components/productDetails/productDetails.css
+++ b/src/components/productDetails/productDetails.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-  padding-top: 200px;
-  color: black;
+    padding-top: 200px;
+    color: black;
 
-  }
-  .product-item{
+}
+
+.product-item {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -14,58 +15,85 @@
     background: white;
     padding: 30px;
     border-radius: 15px;
-  }
-  .product-image-container {
+    max-width: 1000px;
+}
+
+.product-image-container {
     flex: 1;
     display: flex;
     justify-content: center;
 
-  }
-  
-  .product-image {
-    max-width: 100%;
-    width: 800px;
-    min-width: 500px;
-    max-height: 100%;
-  }
-  
-  .product-details-container {
-    flex: 2;
-    padding-top: 100px;
+}
+
+
+
+.product-details-container {
+    padding-top: 50px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-  }
-  
-  .product-name {
+}
+
+.product-name {
     font-size: 2rem;
     margin-bottom: 1rem;
-    margin-top:-120px;
-  }
-  
-  .product-details {
+    margin-top: -120px;
+}
+
+.product-details {
     margin-top: 1rem;
     margin-left: 10px;
     font-size: 18px;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-  }
-  
-  .product-details p {
+}
+
+.product-details p {
     margin: 0.5rem 0;
     max-width: 500px;
-  }
-  
-  .product-details button {
+}
+
+.product-details button {
     margin-top: 1rem;
-  }
-  .addToCartBttn{
+}
+
+.addToCartBttn {
     background: white;
-    text-decoration:none;
+    text-decoration: none;
     color: black;
     max-width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
+.swiper{
+    max-width: 550px;
+}
+.slide-container{
+    max-width: 500px!important;
+    width: 100%;
+    padding: 40px 0;
+}
+.slide-content{
+    margin: 0 40px;
+    overflow: hidden;
+    border-radius: 25px;
+}
+.card{
+    border-radius: 25px;
+    background-color: #FFF;
+}
+.card-image{
+    position: relative;
+    height: 400px;
+    width: 550px;
+
+}
+.card-image .card-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+}
