--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 30px;
 }
 
 .logo a {
@@ -56,4 +56,9 @@
     background-image: linear-gradient(to right, #00ffcc, #0066ff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+.personal__office{
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
 }
