--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -61,27 +61,17 @@
   }
   
   .addToCartBttn {
-    background-color: transparent;
+    background-color: white;
     border: 2px solid black;
-    font-size: 16px;
+    font-size: 20px;
     min-width: 100px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 10px 20px;
     border-radius: 15px;
+    color: black;
+  cursor: pointer;
   }
   
-  .addToCartBttn:hover {
-    background-color: rgb(156, 156, 156);
-    color: white;
-    cursor: pointer;
-  }
 
-  .addToCartBttn:active {
-    transform: scale(1.05);
-    background-color: rgb(138, 138, 138);
-  }
 
   .product-link {
     color:rgb(70, 70, 70);
